--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -12,18 +12,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Extract branch name
-      shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: extract_branch
+    - name: Branch name
+      run: echo running on branch ${GITHUB_REF##*/}
     - uses: actions/checkout@v2
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
     - name: Install dependencies
-      run: dotnet restore eng:${{ steps.extract_branch.outputs.branch }}
+      run: dotnet restore ${GITHUB_REF##*/}
     - name: Build
-      run: dotnet build --configuration Release --no-restore eng:${{ steps.extract_branch.outputs.branch }}
+      run: dotnet build --configuration Release --no-restore ${GITHUB_REF##*/}
     - name: Test
-      run: dotnet test --no-restore --verbosity normal eng:${{ steps.extract_branch.outputs.branch }}
+      run: dotnet test --no-restore --verbosity normal ${GITHUB_REF##*/}
