--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -12,16 +12,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Branch name
-      run: echo running on branch ${GITHUB_REF##*/}
+    - name: Inject slug/short variables
+      uses: rlespinasse/github-slug-action@v2.x
+    - name: Print slug/short variables
+      run: |
+      echo "Slug variables"
+      echo "   ref        : ${{ env.GITHUB_REF_SLUG }}"
+      echo "   head ref   : ${{ env.GITHUB_HEAD_REF_SLUG }}"
+      echo "   base ref   : ${{ env.GITHUB_BASE_REF_SLUG }}"
+      echo "   event ref  : ${{ env.GITHUB_EVENT_REF_SLUG }}"
+      echo "   repository : ${{ env.GITHUB_REPOSITORY_SLUG }}"
+      echo "Slug URL variables"
+      echo "   ref        : ${{ env.GITHUB_REF_SLUG_URL }}"
+      echo "   head ref   : ${{ env.GITHUB_HEAD_REF_SLUG_URL }}"
+      echo "   base ref   : ${{ env.GITHUB_BASE_REF_SLUG_URL }}"
+      echo "   event ref  : ${{ env.GITHUB_EVENT_REF_SLUG_URL }}"
+      echo "   repository : ${{ env.GITHUB_REPOSITORY_SLUG_URL }}"
+      echo "Short SHA variables"
+      echo "   sha        : ${{ env.GITHUB_SHA_SHORT }}"
     - uses: actions/checkout@v2
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
     - name: Install dependencies
-      run: dotnet restore ${GITHUB_REF##*/}
+      run: dotnet restore ${{ env.GITHUB_REF_SLUG }}
     - name: Build
-      run: dotnet build --configuration Release --no-restore ${GITHUB_REF##*/}
+      run: dotnet build --configuration Release --no-restore ${{ env.GITHUB_REF_SLUG }}
     - name: Test
-      run: dotnet test --no-restore --verbosity normal ${GITHUB_REF##*/}
+      run: dotnet test --no-restore --verbosity normal ${{ env.GITHUB_REF_SLUG }}
